# 3dsmc_project

./: .gitignore  Readme.md  test.py
Project/: CMakeLists.txt  Loss.cpp  LossTest.cpp  LossTest2.cpp  README.md  Rigid_alignment_RT.cpp  extract_vertices_under4.3.cpp  log.txt  log_1.txt  log_2.txt  main.cpp  main_landmarks.cpp  map_flame_to_output_index.py  map_flame_to_output_xyzrgba.py  match_landmarks_to_flame.py  read_flame.cpp  scale.cpp  test_alignment.cpp  to_off.cpp  transform_off.cpp  transform_pip_to_rgb.cpp  utils.cpp  utils.h
Project/Data/: calibration.json
Project/Data/3d/: test_mean_new.txt
Project/Data/3d/knn/: flame_2.txt  index_list.txt  indices_2.txt  matchedFlame.txt  matchedFlame_2.txt  matched_2.txt  test_betas_2.txt
Project/Data/betas/00023/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Project/Data/camera/: c00_color_extrinsic.txt  c00_color_intrinsic.txt  c00_depth_extrinsic.txt
Project/Data/color/Mediapipe_landmarks/: 00002.npy  00005.npy  00006.npy  00008.npy  00011.npy  00012.npy  00014.npy  00015.npy  00016.npy  00017.npy  00021.npy  00023.npy  00026.npy  00028.npy  00029.npy  00031.npy  00032.npy  00035.npy  00036.npy  00037.npy  00038.npy  00039.npy  00040.npy  00043.npy  00047.npy  00049.npy  00051.npy  00053.npy  00056.npy  00058.npy  00061.npy  00063.npy  00064.npy  00066.npy  00067.npy  00071.npy  00074.npy  00075.npy  00076.npy  00078.npy  (+6 more)
Project/Data/color/PIPnet_landmarks/: 00000.npy  00001.npy  00002.npy  00003.npy  00005.npy  00006.npy  00008.npy  00009.npy  00011.npy  00013.npy  00015.npy  00017.npy  00018.npy  00020.npy  00021.npy  00025.npy  00026.npy  00028.npy  00031.npy  00036.npy  00037.npy  00041.npy  00042.npy  00044.npy  00045.npy  00048.npy  00051.npy  00053.npy  00055.npy  00056.npy  00057.npy  00058.npy  00059.npy  00060.npy  00063.npy  00064.npy  00065.npy  00066.npy  00067.npy  00068.npy  (+14 more)
Project/Data/landmarks_2d_text/: 00000.txt  00001.txt
Project/Data/optimize_test/: test_betas_1.txt  test_betas_10.txt  test_betas_2.txt  test_betas_3.txt  test_betas_4.txt  test_betas_5.txt  test_betas_6.txt  test_betas_7.txt  test_betas_8.txt  test_betas_9.txt
Project/Lift_depth/: Lift_depth.cpp  pixel_match.cpp
Project/RT/: Rigid_alignment_RT.cpp  extract_2d_landmark.py  main.cpp  scale.cpp  to_off.cpp  transform_off.cpp  transform_pip_to_rgb.cpp
Project/RigidAlignment/: rt.cpp
Project/data/: source.txt  target.txt
Project/data/camera/: c00_depth_intrinsic.txt
Project/data/color/Mediapipe_landmarks/: 00000.npy  00001.npy  00002.npy  00003.npy  00004.npy  00005.npy  00006.npy  00007.npy  00008.npy  00009.npy  00010.npy  00011.npy  00012.npy  00013.npy  00014.npy  00015.npy  00016.npy  00017.npy  00018.npy  00019.npy  00020.npy  00021.npy  00022.npy  00023.npy  00024.npy  00025.npy  00026.npy  00027.npy  00028.npy  00029.npy  00030.npy  00031.npy  00032.npy  00033.npy  00034.npy  00035.npy  00036.npy  00037.npy  00038.npy  00039.npy  (+58 more)
Project/data/color/PIPnet_landmarks/: 00000.npy  00001.npy  00002.npy  00003.npy  00004.npy  00005.npy  00006.npy  00007.npy  00008.npy  00009.npy  00010.npy  00011.npy  00012.npy  00013.npy  00014.npy  00015.npy  00016.npy  00017.npy  00018.npy  00019.npy  00020.npy  00021.npy  00022.npy  00023.npy  00024.npy  00025.npy  00026.npy  00027.npy  00028.npy  00029.npy  00030.npy  00031.npy  00032.npy  00033.npy  00034.npy  00035.npy  00036.npy  00037.npy  00038.npy  00039.npy  (+58 more)
Project/knn/: knn.cpp  knn_1.cpp  knn_2.cpp  knn_merge.cpp  knn_nanoflann.cpp  nanoflann.hpp
Project/model/FLAME2023/: check_npz.py  convert_flame_pkl_to_npz.py  convert_flame_pkl_to_npz_backup.py
Project/model/mediapipe_landmark_embedding/: 00001.npy
Project/optimizer/: flame.txt  indices.txt  matched.txt  optimize.cpp  optimize_face_only.cpp  optimize_plane.cpp  read_flame.cpp  test_betas_1.txt  visualize_knn_match.py  write_obj.cpp
RigidAlignment/: CMakeLists.txt  main1.cpp
RigidAlignment/data/: flame_mediapipe_landmarks.txt
RigidAlignment/data/2dlandmarks/: 00001_2dlandmarks.txt  00004_2dlandmarks.txt  00005_2dlandmarks.txt  00007_2dlandmarks.txt  00008_2dlandmarks.txt  00013_2dlandmarks.txt  00014_2dlandmarks.txt  00015_2dlandmarks.txt  00016_2dlandmarks.txt  00021_2dlandmarks.txt  00022_2dlandmarks.txt  00023_2dlandmarks.txt  00025_2dlandmarks.txt  00028_2dlandmarks.txt  (+33 more)
flame/: 00001.npy  00001_flame_onlyface.off  2d_mediapipe_105_landmarks.txt  delete_first_column.py  flame_mediapipe_landmark_indices.npz  flame_mediapipe_landmark_vertex_indices.txt  flame_mediapipe_landmarks.off  flame_mediapipe_landmarks.txt  flame_to_npz.py  flame_to_off.py  get_landmark.py  landmark_2d_468to105.py  match_landmarks.py  match_landmarks_to_flame.py  matching.py  mediapipe_2d_landmark.py  mediapipe_468_landmarks.npy  obj_to_off.py  open_npy.py  optimized_shape_params.txt  print_parameters.py  test_betas.txt  write_landmark.py  write_mesh.py  write_mesh_in_txt.py
flame/2dlandmarks/: 00000_2dlandmarks.txt  00002_2dlandmarks.txt  00003_2dlandmarks.txt  00006_2dlandmarks.txt  00009_2dlandmarks.txt  00010_2dlandmarks.txt  00011_2dlandmarks.txt  00012_2dlandmarks.txt  00017_2dlandmarks.txt  00018_2dlandmarks.txt  00019_2dlandmarks.txt  00020_2dlandmarks.txt  00024_2dlandmarks.txt  00026_2dlandmarks.txt  00027_2dlandmarks.txt  00029_2dlandmarks.txt  00030_2dlandmarks.txt  00031_2dlandmarks.txt  00032_2dlandmarks.txt  00035_2dlandmarks.txt  00042_2dlandmarks.txt  00046_2dlandmarks.txt  00047_2dlandmarks.txt  00052_2dlandmarks.txt  00056_2dlandmarks.txt  00057_2dlandmarks.txt  00058_2dlandmarks.txt  00059_2dlandmarks.txt  00060_2dlandmarks.txt  00063_2dlandmarks.txt  00064_2dlandmarks.txt  00065_2dlandmarks.txt  00066_2dlandmarks.txt  00070_2dlandmarks.txt  00071_2dlandmarks.txt  00072_2dlandmarks.txt  00073_2dlandmarks.txt  00076_2dlandmarks.txt  00077_2dlandmarks.txt  00078_2dlandmarks.txt  (+11 more)
flame/matching/: flame_matching.txt  pip_matching.txt
flame/mesh/: flame2023obj_mean.txt  generic_model.off
others/: create_video_from_img.py  get_depth.py  get_landmarks.py  plot_3D.py
(+111 files in other folders)
